Added Iot.Device.Bindings library.

--- a/dotnet/SPIN.Core.csproj
+++ b/dotnet/SPIN.Core.csproj
@@ -4,4 +4,8 @@
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
     </PropertyGroup>
+
+    <ItemGroup>
+        <PackageReference Include="Iot.Device.Bindings" Version="2.2.0" />
+    </ItemGroup>
 </Project>
