--- a/dotnet/SPIN.Core.csproj
+++ b/dotnet/SPIN.Core.csproj
@@ -7,5 +7,6 @@
 
     <ItemGroup>
         <PackageReference Include="Iot.Device.Bindings" Version="2.2.0" />
+        <PackageReference Include="MediatR" Version="12.0.1" />
     </ItemGroup>
 </Project>
