--- a/dotnet/SPIN.Core.csproj
+++ b/dotnet/SPIN.Core.csproj
@@ -8,5 +8,6 @@
     <ItemGroup>
         <PackageReference Include="Iot.Device.Bindings" Version="2.2.0" />
         <PackageReference Include="MediatR" Version="12.0.1" />
+        <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="7.0.0" />
     </ItemGroup>
 </Project>
