--- a/ccpp/src/SPIN/Guid/CMakeLists.txt
+++ b/ccpp/src/SPIN/Guid/CMakeLists.txt
@@ -19,3 +19,5 @@
 # LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
 # OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 # SOFTWARE.
+
+set(SPIN_Core_SRC_C "${CMAKE_CURRENT_LIST_DIR}/EmptyGuid.c;${SPIN_Core_SRC_C}")
