--- a/ccpp/src/SPIN/Core/CMakeLists.txt
+++ b/ccpp/src/SPIN/Core/CMakeLists.txt
@@ -20,4 +20,4 @@
 # OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 # SOFTWARE.
 
-include("${CMAKE_CURRENT_LIST_DIR}/Core/CMakeLists.txt")
+include("${CMAKE_CURRENT_LIST_DIR}/Guid/CMakeLists.txt")
